@@ -36,6 +36,7 @@
 #include "ui_addhistoryline.h"
 
 cfg (Bool, edit_schemanticinline, false);
+extern_cfg (String, ld_defaultuser);
 
 // =============================================================================
 // -----------------------------------------------------------------------------
@@ -674,6 +675,7 @@ DEFINE_ACTION (AddHistoryLine, 0) {
 	QDialog* dlg = new QDialog;
 	Ui_AddHistoryLine* ui = new Ui_AddHistoryLine;
 	ui->setupUi (dlg);
+	ui->m_username->setText (ld_defaultuser);
 	ui->m_date->setDate (QDate::currentDate());
 	ui->m_comment->setFocus();
 	
